<resources>
    <string name="app_name">CMPE137Lab2</string>
    <string name="action_reset">RESET</string>

    <string name="home_value">Home Value</string>
    <string name="down_payment">Down Payment</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="terms">Terms</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="total_tax_payment">Total Tax Payment</string>
    <string name="total_interest_paid">Total Interest Paid</string>
    <string name="montly_payment">Montly Payment</string>
    <string name="pay_off_date">Pay off Date</string>
    <string name="calculate">Calculate</string>

    <string-array name="terms_array">
        <item>"15"</item>
        <item>"20"</item>
        <item>"25"</item>
        <item>"30"</item>
        <item>"40"</item>
    </string-array>
</resources>
